fix backlink formatting when text overflows

--- a/extensions/inline-backlink/style.css
+++ b/extensions/inline-backlink/style.css
@@ -3,6 +3,7 @@
   border-radius: var(--window-pill-borderRadius);
   background-color: var(--backLink-backLink-bgColor);
   margin: 0 0.2rem;
+  text-align: start;
 }
 
 .inline-backlink_backlink:hover {
